syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.hernani";

package br.com.hernani;

import "google/protobuf/timestamp.proto";

service FuncionarioService {
  rpc cadastraFuncionario (FuncionarioRequest) returns (FuncionarioResponse) {}
}

enum Cargo{
  DEV = 0;
  ANALISTA = 1;
}

message FuncionarioRequest {
  string nome = 1;
  string cpf = 2;
  int32 idade = 3;
  Cargo cargo = 4;
  int64  id = 5;
}

message FuncionarioResponse {
  int64 id = 1;
}